Bug 1026159 [2.0 uplift] override search result label styles to wrap 2 lines, tighten up grid and search results layout per spec. r=kgrandon

--- a/apps/verticalhome/style/css/search.css
+++ b/apps/verticalhome/style/css/search.css
@@ -1,6 +1,6 @@
 #search {
   height: 4.6rem;
-  margin-bottom: 1.2rem;
+  margin-bottom: 1rem;
   background-color: rgba(0, 0, 0, 0.15);
 }
 
